--- a/pikerswebsite/assets/css/main.css
+++ b/pikerswebsite/assets/css/main.css
@@ -69,6 +69,28 @@ div {
   background-image: url("images/bg01.png");
 }
 
+iframe {
+  width: 100%;
+}
+
+.aspect-ratio {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
+}
+
+.aspect-ratio iframe {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0; top: 0;
+}
+
+.footer {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
 a {
   color: green;
 }
